--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,32 +17,21 @@ html {
 }
 
 body {
-  font-family: "poppins", sans-serif;
   color: var(--black-95);
 }
 
-.cursor {
-  width: 14px;
-  height: 14px;
-  border: 1px solid #0a0a0a;
-  border-radius: 50%;
-  background-color: #202020b4;
-  position: absolute;
-  z-index: 1;
-  transition-timing-function: ease-out;
-  transition-duration: 200ms;
+h1,
+h2,
+h3 {
+  font-family: "Crimson Text", serif;
 }
 
-.span-style-one {
-  color: var(--orange-100);
-  background-color: var(--orange-muted);
-  font-weight: 600;
+p {
+  font-family: "Poppins", sans-serif;
 }
 
-.span-style-two {
-  color: var(--blue-100);
-  background-color: var(--blue-muted);
-  font-weight: 600;
+a {
+  text-decoration: none;
 }
 
 section {
@@ -64,49 +53,71 @@ nav .fab {
 }
 
 .hero-section {
+  display: block;
+  width: 70%;
+  margin: 7rem auto;
   min-height: 60vh;
 }
 
-.hero-section.text-center-section {
-  width: 70%;
-  margin: 4rem auto;
+.hero-section h1 {
+  font-size: 3.54rem;
+  line-height: 1.5;
 }
 
-.hero-section h1 {
-  font-size: 2.64rem;
-  line-height: 1.5;
-  word-wrap: break-word;
-  font-weight: 400;
+.hero-section p {
+  margin-top: 2.3rem;
+}
+
+.hero-section .fa-chevron-down {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+  font-size: 1.53rem;
+  animation: arrowUpDown infinite 1500ms 200ms ease-in-out;
+}
+
+@keyframes arrowUpDown {
+  0% {
+    transform: translateY(0px);
+  }
+  75% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .project-header h2 {
   line-height: 1.5;
-  font-size: 3.5rem;
-  font-weight: 600;
-  padding-left: 12px;
+  font-size: 2rem;
 }
 
-.project-header h2 span {
+.project-container .project-card {
+  display: flex;
+}
+
+.project-container .project-card .project-card-image img {
+  border-radius: 8px;
+  margin-right: 10px;
+  height: 350px;
+}
+
+.project-container .project-card .project-body h3 {
+  margin-top: 2rem;
+  font-size: 2.3rem;
+}
+
+.project-container .project-card .project-body h3 span {
   display: block;
-  color: transparent;
-  text-shadow: none;
-  -webkit-text-stroke: 2.28px var(--black-95);
 }
 
-.project-header:hover {
-  transition-duration: 200ms;
+.project-container .project-card .project-body p {
+  margin-top: 1.5rem;
 }
 
-.project-header:hover h2 {
-  color: transparent;
-  text-shadow: none;
-  -webkit-text-stroke: 2.28px var(--black-95);
-}
-
-.project-header:hover h2 span {
-  color: var(--black-95);
-  transition-timing-function: ease-in;
-  transition-duration: 300ms;
+.project-container .project-card .project-body a {
+  font-size: 1.42rem;
 }
 
 .project-list {
@@ -239,6 +250,10 @@ footer hr {
   margin: 15px auto 25px;
 }
 
+footer p {
+  font-size: 0.85rem;
+}
+
 .scroll-top {
   display: none;
   position: fixed;
@@ -283,41 +298,42 @@ footer hr {
     line-height: 1.5;
   }
   .navbar .container-fluid {
-    display: flex;
     flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
   }
   .navbar .container-fluid ul {
-    display: flex;
     flex-direction: row;
+    margin: 0 auto;
   }
   .navbar .container-fluid ul li {
     margin-top: 15px;
     padding: 0 15px;
   }
-  .navbar-section-links {
+  .navbar .navbar-social {
     display: none;
   }
   .project-header h2 {
     font-size: 2.3rem;
-    letter-spacing: 3px;
   }
-  .project-list {
+  .project-container .project-card {
+    flex-direction: column;
+  }
+  .project-container .project-card .project-card-image img {
+    margin-right: 0;
     width: 100%;
+    height: auto;
   }
-  .project-list .row {
-    flex-direction: column-reverse;
-  }
-  .project-list .project--about {
-    padding: 1.5rem;
-  }
-  .project-list .project--image {
-    padding: 0;
-  }
-  .project-list .project--image img {
-    height: 250px;
+  .project-container .project-card .project-body p {
+    line-height: 1.63rem;
+    letter-spacing: 0.81px;
   }
   .social a.social-links {
     padding: 10px 10px;
+  }
+  footer p {
+    width: 70%;
+    margin: 0 auto 25px;
   }
 }
 /*# sourceMappingURL=style.css.map */
