--- a/style.scss
+++ b/style.scss
@@ -443,3 +443,46 @@ footer {
     }
   }
 }
+
+.about-section {
+  display: block;
+  // margin-top: 3rem;
+  // &.text-center-section {
+  width: 70%;
+  margin: 7rem auto;
+  .col-3 {
+    width: 30%;
+    img {
+      width: 250px;
+    }
+  }
+  .col-9 {
+    width: 60%;
+    margin: auto;
+    p {
+      // width: 500px;
+      font-size: 1.02rem;
+      line-height: 1.5;
+      font-weight: lighter;
+    }
+  }
+}
+@media screen and (max-width: 560px) {
+  .about-section {
+    width: 80%;
+    margin: 4rem auto;
+    .col-3 {
+      width: 100%;
+      img {
+        width: 250px;
+      }
+    }
+    .col-9 {
+      width: 100%;
+      p {
+        font-size: 1.2rem;
+        line-height: 1.5;
+      }
+    }
+  }
+}
