fix-css and desc on aboutpage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,8 +116,10 @@ nav .fab {
   margin-top: 1.5rem;
 }
 
-.project-container .project-card .project-body a {
-  font-size: 1.42rem;
+.project-container .project-card .project-body .link-container a {
+  display: block;
+  font-size: 1.2rem;
+  margin-top: 0.25rem;
 }
 
 .project-list {
@@ -449,6 +451,21 @@ footer p {
     font-size: 0.82rem;
     line-height: 1.5;
     font-weight: lighter;
+    background-color: rebeccapurple;
+  }
+  .about-section .col-9 .col-lg-2 {
+    align-items: center;
+    display: inline-flex;
+    height: 100%;
+    max-width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 16px;
+    font-size: 14px;
+    height: 32px;
+    padding: 0 1em;
+    margin: 0.2em 0.25em;
+    font-weight: 600;
+    cursor: -webkit-grabbing;
   }
 }
 
