--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,9 @@
   --orange-muted: #fff7df;
   --green-100: #077b07;
   --green-muted: #cdf3cd;
+  --whitish: #f4f9fd;
+  --color-one: #ffab66;
+  --color-two: #7551cb;
 }
 
 html {
@@ -95,6 +98,7 @@ nav {
   }
   p {
     margin-top: 2.3rem;
+    font-size: 1.325rem;
   }
   .fa-chevron-down {
     display: flex;
@@ -120,12 +124,54 @@ nav {
     }
   }
 }
+.text-center {
+  text-align: center;
+}
+h2.center-heading {
+  line-height: 1.5;
+  font-size: 2rem;
+}
+.color-one {
+  background-color: var(--color-one);
+}
+.color-two {
+  background-color: var(--color-two);
+}
+a,
+a:active,
+a:hover {
+  text-decoration: none;
+}
+
+.service-container {
+  min-height: 80vh;
+  display: flex;
+  flex-direction: row;
+  .col-6 {
+    width: 35%;
+    margin: auto;
+
+    .card {
+      margin-top: 50px;
+      border: 1px solid var(--whitish);
+      background-color: var(--whitish);
+      padding: 25px;
+      border-radius: 25px;
+
+      .img-responsive {
+        padding: 25px;
+
+        border-radius: 50%;
+        // height: 25px;
+        width: 25px;
+      }
+    }
+  }
+}
 
 // featured project text and animation section start here
 .project-header {
   h2 {
-    line-height: 1.5;
-    font-size: 2rem;
     // font-weight: 600;
     // padding-left: 12px;
     // span {
@@ -137,7 +183,38 @@ nav {
     // }
   }
 }
+.project-containers {
+  .row {
+    display: flex;
+    flex-direction: row;
+  }
+  .project-card {
+    position: relative;
+    min-height: 300px;
 
+    .color-one {
+      // padding: 25px;
+    }
+    h3 {
+      // display: block;
+      // margin-top: 2rem;
+      font-size: 2.3rem;
+      color: var(--white-80);
+      span {
+        display: block;
+      }
+    }
+    p {
+      color: var(--white-80);
+      margin-top: 1.5rem;
+    }
+    .color-one,
+    .color-two {
+      min-height: inherit;
+      padding: 25px;
+    }
+  }
+}
 .project-container {
   // display: flex;
   .project-card {
@@ -352,6 +429,24 @@ footer {
 .show {
   display: block;
 }
+.uses-page {
+  width: 80%;
+  margin: auto;
+  h2 {
+    margin-top: 100px;
+    text-align: center;
+  }
+  .uses-para {
+    margin-top: 30px;
+    text-align: center;
+  }
+  .uses-container {
+    .col-6 {
+      margin: 25px 0;
+    }
+  }
+}
+
 @media screen and (max-width: 560px) {
   .cursor {
     display: none;
@@ -393,47 +488,59 @@ footer {
       display: none;
     }
   }
-  .project-header {
-    h2 {
-      // line-height: 1.5;
-      font-size: 2.3rem;
-      // letter-spacing: 3px;
+
+  .service-container {
+    flex-direction: column;
+    .col-6 {
+      width: 100%;
+      margin: auto;
     }
   }
-  .project-container {
-    // display: flex;
-    .project-card {
-      // display: flex;
+  .project-containers {
+    .row {
+      display: flex;
       flex-direction: column;
-      .project-card-image {
-        // display: flex;
-        img {
-          // border-radius: 8px;
-          margin-right: 0;
-          width: 100%;
-          height: auto;
-        }
+      .col-5,
+      .col-7 {
+        width: 100%;
+        margin: 25px 0 0;
       }
-      .project-body {
-        // h3 {
+    }
+    .project-card {
+      position: relative;
+      min-height: 300px;
+
+      .color-one {
+        // padding: 25px;
+      }
+      h3 {
         // display: block;
         // margin-top: 2rem;
-        // font-size: 2.3rem;
-        // span {
-        // display: block;
-        // }
-        // }
-        p {
-          line-height: 1.63rem;
-          // letter-spacing: initial;
-          letter-spacing: 0.81px;
+        font-size: 2.3rem;
+        color: var(--white-80);
+        span {
+          display: block;
         }
-        // a {
-        // font-size: 1.42rem;
-        // }
+      }
+      p {
+        color: var(--white-80);
+        margin-top: 1.5rem;
+      }
+      .color-one,
+      .color-two {
+        min-height: inherit;
+        padding: 25px;
       }
     }
   }
+  // .project-header {
+  //   h2 {
+  //     // line-height: 1.5;
+  //     font-size: 2.3rem;
+  //     // letter-spacing: 3px;
+  //   }
+  // }
+
   .social {
     a.social-links {
       // margin: 20px 0;
@@ -446,6 +553,26 @@ footer {
       margin: 0 auto 25px;
     }
   }
+
+  .uses-page {
+    width: 80%;
+    margin: auto;
+    h2 {
+      margin-top: 100px;
+      text-align: center;
+    }
+    .uses-para {
+      margin-top: 30px;
+      text-align: center;
+    }
+    .uses-container {
+      flex-direction: column;
+      .col-6 {
+        margin: 5px 0;
+        width: 100%;
+      }
+    }
+  }
 }
 
 .about-section {
@@ -456,6 +583,7 @@ footer {
   margin: 7rem auto;
   .col-3 {
     width: 30%;
+    text-align: center;
     img {
       width: 250px;
     }
@@ -470,6 +598,22 @@ footer {
       font-weight: lighter;
     }
   }
+  .resume-btn {
+    display: inline-block;
+    border: 2px solid var(--blue-100);
+    border-radius: 5px;
+    margin-top: 25px;
+    padding: 10px 25px;
+    font-size: 1.19rem;
+    text-align: center;
+    color: #fff;
+    background-color: var(--blue-100);
+  }
+  .resume-btn:hover {
+    border: 2px solid var(--color-two);
+
+    background-color: var(--color-two);
+  }
 }
 @media screen and (max-width: 560px) {
   .about-section {
@@ -478,10 +622,12 @@ footer {
     .col-3 {
       width: 100%;
       img {
-        width: 150px;
         display: flex;
         // text-align: center;
         margin: 0 auto;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
       }
     }
     .col-9 {
@@ -501,162 +647,162 @@ footer {
     margin: 5px 0;
   }
 }
-@media screen and (min-width: 561px) and (max-width: 800px) {
-  .navbar {
-    .container-fluid {
-      // display: flex;
-      flex-direction: column;
-      width: 100%;
-      margin: 0 auto;
-      ul {
-        // display: flex;
-        flex-direction: row;
-        margin: 0 auto;
-        li {
-          // display: block;
-          margin-top: 15px;
-          padding: 0 15px;
-        }
-      }
-    }
-    .navbar-section-links {
-      // margin: -105;
-      // display: none;
-    }
-    .navbar-social {
-      display: none;
-    }
-  }
-  .hero-section {
-    display: block;
-    width: 80%;
-    margin: 5rem auto;
-    min-height: 60vh;
-    h1 {
-      font-size: 2.35rem;
-    }
-  }
-  section {
-    width: 80%;
-    margin: auto;
-  }
-  .project-container {
-    .project-card {
-      display: flex;
-      flex-direction: column;
-      .project-card-image {
-        img {
-          height: 350px;
-          width: 100%;
-        }
-      }
-    }
-  }
-  .about-section {
-    display: block;
-    // margin-top: 3rem;
-    // &.text-center-section {
-    width: 80%;
-    margin: 7rem auto;
-    .col-3 {
-      width: 30%;
-      img {
-        width: 150px;
-      }
-    }
-    .col-9 {
-      width: 60%;
-      margin: auto;
-      p {
-        // width: 500px;
-        font-size: 0.82rem;
-        line-height: 1.5;
-        font-weight: lighter;
-        background-color: rebeccapurple;
-      }
-      .col-lg-2 {
-        align-items: center;
-        display: inline-flex;
-        height: 100%;
-        max-width: 100%;
-        border: 1px solid #ccc;
-        border-radius: 16px;
-        font-size: 14px;
-        height: 32px;
-        padding: 0 1em;
-        margin: 0.2em 0.25em;
-        font-weight: 600;
-        cursor: -webkit-grabbing;
-      }
-    }
-  }
-}
-@media screen and (min-width: 801px) and (max-width: 1024px) {
-  .hero-section {
-    min-height: 20vh;
-    p {
-      font-size: 2rem;
-    }
-  }
-  .project-header h2 {
-    line-height: 1.5;
-    font-size: 3rem;
-  }
-  .project-container {
-    .project-card {
-      display: flex;
-      flex-direction: column;
-      .project-card-image {
-        img {
-          height: 450px;
-          width: 100%;
-        }
-      }
-      .project-body {
-        h3 {
-          font-size: 3rem;
-        }
-        p {
-          font-size: 2rem;
-        }
-      }
-    }
-  }
-  .about-section {
-    display: block;
-    // margin-top: 3rem;
-    // &.text-center-section {
-    width: 80%;
-    margin: 7rem auto;
-    // .col-3 {
-    //   width: 30%;
-    //   img {
-    //     width: 150px;
-    //   }
-    // }
-    // .col-9 {
-    //   width: 60%;
-    //   margin: auto;
-    //   p {
-    //     // width: 500px;
-    //     font-size: 0.82rem;
-    //     line-height: 1.5;
-    //     font-weight: lighter;
-    //   }
-    // }
-  }
-  .contact-container h2 {
-    line-height: 1.5;
-    font-size: 2.55em;
-  }
-  .email-copy p#email {
-    font-size: 2.2rem;
-  }
-  i.fas.fa-clipboard {
-    font-size: 1.62rem;
-  }
-  .social a.social-links i {
-    font-size: 2.2rem;
-    color: var(--black-social);
-  }
-}
+// @media screen and (min-width: 561px) and (max-width: 800px) {
+//   .navbar {
+//     .container-fluid {
+//       // display: flex;
+//       flex-direction: column;
+//       width: 100%;
+//       margin: 0 auto;
+//       ul {
+//         // display: flex;
+//         flex-direction: row;
+//         margin: 0 auto;
+//         li {
+//           // display: block;
+//           margin-top: 15px;
+//           padding: 0 15px;
+//         }
+//       }
+//     }
+//     .navbar-section-links {
+//       // margin: -105;
+//       // display: none;
+//     }
+//     .navbar-social {
+//       display: none;
+//     }
+//   }
+//   .hero-section {
+//     display: block;
+//     width: 80%;
+//     margin: 5rem auto;
+//     min-height: 60vh;
+//     h1 {
+//       font-size: 2.35rem;
+//     }
+//   }
+//   section {
+//     width: 80%;
+//     margin: auto;
+//   }
+//   .project-container {
+//     .project-card {
+//       display: flex;
+//       flex-direction: column;
+//       .project-card-image {
+//         img {
+//           height: 350px;
+//           width: 100%;
+//         }
+//       }
+//     }
+//   }
+//   .about-section {
+//     display: block;
+//     // margin-top: 3rem;
+//     // &.text-center-section {
+//     width: 80%;
+//     margin: 7rem auto;
+//     .col-3 {
+//       width: 30%;
+//       img {
+//         width: 150px;
+//       }
+//     }
+//     .col-9 {
+//       width: 60%;
+//       margin: auto;
+//       p {
+//         // width: 500px;
+//         font-size: 0.82rem;
+//         line-height: 1.5;
+//         font-weight: lighter;
+//         background-color: rebeccapurple;
+//       }
+//       .col-lg-2 {
+//         align-items: center;
+//         display: inline-flex;
+//         height: 100%;
+//         max-width: 100%;
+//         border: 1px solid #ccc;
+//         border-radius: 16px;
+//         font-size: 14px;
+//         height: 32px;
+//         padding: 0 1em;
+//         margin: 0.2em 0.25em;
+//         font-weight: 600;
+//         cursor: -webkit-grabbing;
+//       }
+//     }
+//   }
+// }
+// @media screen and (min-width: 801px) and (max-width: 1024px) {
+//   .hero-section {
+//     min-height: 20vh;
+//     p {
+//       font-size: 2rem;
+//     }
+//   }
+//   .project-header h2 {
+//     line-height: 1.5;
+//     font-size: 3rem;
+//   }
+//   .project-container {
+//     .project-card {
+//       display: flex;
+//       flex-direction: column;
+//       .project-card-image {
+//         img {
+//           height: 450px;
+//           width: 100%;
+//         }
+//       }
+//       .project-body {
+//         h3 {
+//           font-size: 3rem;
+//         }
+//         p {
+//           font-size: 2rem;
+//         }
+//       }
+//     }
+//   }
+//   .about-section {
+//     display: block;
+//     // margin-top: 3rem;
+//     // &.text-center-section {
+//     width: 80%;
+//     margin: 7rem auto;
+//     // .col-3 {
+//     //   width: 30%;
+//     //   img {
+//     //     width: 150px;
+//     //   }
+//     // }
+//     // .col-9 {
+//     //   width: 60%;
+//     //   margin: auto;
+//     //   p {
+//     //     // width: 500px;
+//     //     font-size: 0.82rem;
+//     //     line-height: 1.5;
+//     //     font-weight: lighter;
+//     //   }
+//     // }
+//   }
+//   .contact-container h2 {
+//     line-height: 1.5;
+//     font-size: 2.55em;
+//   }
+//   .email-copy p#email {
+//     font-size: 2.2rem;
+//   }
+//   i.fas.fa-clipboard {
+//     font-size: 1.62rem;
+//   }
+//   .social a.social-links i {
+//     font-size: 2.2rem;
+//     color: var(--black-social);
+//   }
+// }
